--- a/src/layouts/BasicLayout.astro
+++ b/src/layouts/BasicLayout.astro
@@ -88,7 +88,10 @@ const schema =
     <meta content={description} name="twitter:description" />
     <meta content={image || `${Astro.url.origin}/og-image.png`} name="twitter:image" />
 
-    <link href="https://cdn.fontshare.com" rel="preconnect" />
+    <link rel="preconnect" href="https://cdn.fontshare.com" crossorigin="anonymous" />
+    <link rel="preload" href="https://api.fontshare.com/v2/css?f[]=clash-display@400,500,600,700&f[]=satoshi@400,500,700&display=swap" as="style" />
+    <link rel="stylesheet" href="https://api.fontshare.com/v2/css?f[]=clash-display@400,500,600,700&f[]=satoshi@400,500,700&display=swap" />
+
     <link href={Astro.url.href} rel="canonical" />
     <script is:inline set:html={JSON.stringify(schema)} type="application/ld+json" />
   </head>
@@ -99,34 +102,32 @@ const schema =
 </html>
 
 <style is:global>
+  /* Fallback a fuentes locales si el CDN falla o mientras carga */
   @font-face {
     font-family: "CabinetGrotesk";
     src: url("/fonts/CabinetGrotesk-Variable.ttf") format("truetype-variations");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
     font-weight: 100 1000;
+    font-display: swap;
   }
   @font-face {
     font-family: "Satoshi";
     src: url("/fonts/Satoshi-Variable.ttf") format("truetype-variations");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
     font-weight: 100 1000;
+    font-display: swap;
   }
 
   body {
     margin: 0;
-    font-family: "Satoshi", sans-serif;
+    /* Aseguramos que use las fuentes del CDN o las locales */
+    font-family: "Satoshi", system-ui, sans-serif;
     -webkit-font-smoothing: antialiased;
   }
 
   h1, h2, h3, h4, h5, h6 {
-    font-family: "Cabinet Grotesk", sans-serif;
+    font-family: "Cabinet Grotesk", "Clash Display", sans-serif;
   }
   p {
-    font-family: "Satoshi";
+    font-family: "Satoshi", sans-serif;
   }
   b {
     font-weight: 700 !important;
