refreshed images for nth time

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -11,6 +11,7 @@
     <div class="text-sm text-gray-400 font-light flex flex-col gap-3 leading-relaxed">
       <p>
         Hi! I'm Henry, an <strong class="text-white">Industrial Engineer (UIS)</strong> and Data Analyst.
+        Evaluate the situation with detail, do the right questions, measure the right KPI's and lead the team towards goal efficiently, that makes me an interesting asset for your company
       </p>
       
       <p>
