--- a/src/layouts/BasicLayout.astro
+++ b/src/layouts/BasicLayout.astro
@@ -52,20 +52,10 @@ const schema = page !== "blog"
     <meta content={Astro.generator} name="generator" />
     <title>{title}</title>
     <meta content={description} name="description" />
-    <meta content="index, follow" name="robots" />
     
-    <meta content={title} property="og:title" />
-    <meta content={description} property="og:description" />
-    <meta content="website" property="og:type" />
-    <meta content={Astro.url.origin} property="og:url" />
-    <meta content={image} property="og:image" />
-    <meta content="summary_large_image" name="twitter:card" />
-    <meta content={title} name="twitter:title" />
-    <meta content={description} name="twitter:description" />
-    <meta content={image} name="twitter:image" />
-
     <link rel="preconnect" href="https://cdn.fontshare.com" crossorigin="anonymous" />
-    
+    <link rel="preconnect" href="https://api.fontshare.com" crossorigin="anonymous" />
+
     <link 
       rel="preload" 
       href="https://api.fontshare.com/v2/css?f[]=clash-display@400,500,600,700&f[]=satoshi@400,500,700&display=swap" 
@@ -74,15 +64,10 @@ const schema = page !== "blog"
     />
     
     <noscript>
-      <link 
-        rel="stylesheet" 
-        href="https://api.fontshare.com/v2/css?f[]=clash-display@400,500,600,700&f[]=satoshi@400,500,700&display=swap"
-      />
+        <link rel="stylesheet" href="https://api.fontshare.com/v2/css?f[]=clash-display@400,500,600,700&f[]=satoshi@400,500,700&display=swap">
     </noscript>
 
-    <link href={Astro.url.href} rel="canonical" />
-    <script is:inline set:html={JSON.stringify(schema)} type="application/ld+json" />
-  </head>
+    </head>
   
   <body class="bg-[#0a0a0a] min-h-screen flex flex-col font-sans text-white overflow-y-auto">
     <slot />
